[gd_scene load_steps=11 format=3 uid="uid://cqoe22bo0jrsc"]

[ext_resource type="Script" path="res://GUI/Menu.gd" id="1_v2lf7"]
[ext_resource type="FontFile" uid="uid://dl6vrsfjpetrl" path="res://GUI/Fonts/KosmicFont/KosmicsitalicpersonaluseIta-BWm6w.otf" id="2_dle0y"]
[ext_resource type="FontFile" uid="uid://bjy2mnj32q7fm" path="res://GUI/Fonts/BigSpace/BigSpace-rPKx.ttf" id="4_0qvfn"]
[ext_resource type="Script" path="res://GUI/GenerateBackground.gd" id="5_2rncl"]
[ext_resource type="Script" path="res://GUI/LevelsLoader.gd" id="6_7uagd"]

[sub_resource type="LabelSettings" id="LabelSettings_5owpg"]
font = ExtResource("2_dle0y")
font_size = 200
shadow_size = 5
shadow_color = Color(1, 1, 1, 0)

[sub_resource type="Theme" id="Theme_6as8t"]
default_font = ExtResource("4_0qvfn")
default_font_size = 150

[sub_resource type="Theme" id="Theme_lwdoo"]
resource_local_to_scene = true
default_font = ExtResource("4_0qvfn")
default_font_size = 150
/fonts/Fajneeee = ExtResource("4_0qvfn")

[sub_resource type="Theme" id="Theme_k2uah"]
default_font = ExtResource("4_0qvfn")
default_font_size = 50

[sub_resource type="Theme" id="Theme_7l6up"]
default_font = ExtResource("4_0qvfn")
default_font_size = 30

[node name="Menu" type="Control"]
z_index = 1000
layout_mode = 3
anchor_right = 0.997
anchor_bottom = 0.997
offset_right = 0.599976
offset_bottom = 0.0249634
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v2lf7")
menu = null

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
z_as_relative = false
custom_minimum_size = Vector2(1200, 675)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.003
anchor_bottom = 1.0
offset_right = -0.591064
offset_bottom = 2.00006
color = Color(0, 0, 0, 1)

[node name="Bg" type="Sprite2D" parent="."]
visible = false
position = Vector2(600.5, 337.5)
scale = Vector2(1.11019, 0.351563)

[node name="GameName" type="Label" parent="Bg"]
offset_left = -383.0
offset_top = -903.0
offset_right = 401.0
offset_bottom = -702.0
text = "Gravity Wars"
label_settings = SubResource("LabelSettings_5owpg")

[node name="Continue" type="Button" parent="Bg"]
offset_left = -203.119
offset_top = -558.933
offset_right = 633.881
offset_bottom = -370.933
scale = Vector2(0.5, 0.828)
theme = SubResource("Theme_6as8t")
text = "Continue"

[node name="levels" type="Button" parent="Bg"]
offset_left = -200.417
offset_top = -274.489
offset_right = 636.583
offset_bottom = -86.489
scale = Vector2(0.5, 0.828)
theme = SubResource("Theme_lwdoo")
text = "Levels"

[node name="Options" type="Button" parent="Bg"]
offset_left = -203.119
offset_top = 18.4888
offset_right = 633.881
offset_bottom = 206.489
scale = Vector2(0.5, 0.828)
theme = SubResource("Theme_lwdoo")
text = "Options"

[node name="Exit" type="Button" parent="Bg"]
offset_left = -203.119
offset_top = 337.067
offset_right = 633.881
offset_bottom = 525.067
scale = Vector2(0.5, 0.828)
theme = SubResource("Theme_lwdoo")
text = "Exit"

[node name="Settings" type="Control" parent="."]
visible = false
z_index = 1000
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bg" type="Sprite2D" parent="Settings"]
position = Vector2(600.5, 337.5)
scale = Vector2(1.11019, 0.351563)

[node name="GameName" type="Label" parent="Settings/Bg"]
offset_left = -383.0
offset_top = -903.0
offset_right = 401.0
offset_bottom = -702.0
text = "Gravity Wars"
label_settings = SubResource("LabelSettings_5owpg")

[node name="Warning" type="Label" parent="Settings/Bg"]
offset_left = -454.427
offset_top = -100.978
offset_right = 1394.57
offset_bottom = 46.0223
scale = Vector2(0.5, 1)
theme_override_font_sizes/font_size = 120
text = "There is no Options here!"

[node name="Return" type="Button" parent="Settings/Bg"]
offset_left = -203.118
offset_top = 703.999
offset_right = 633.882
offset_bottom = 891.999
scale = Vector2(0.5, 0.828)
theme = SubResource("Theme_lwdoo")
text = "Return"

[node name="Background" type="Node" parent="."]
script = ExtResource("5_2rncl")

[node name="ObjectContainer" type="Node2D" parent="Background"]

[node name="Levels" type="Control" parent="."]
z_index = 1000
layout_mode = 1
anchor_right = 1.003
anchor_bottom = 1.003
offset_right = -0.591064
offset_bottom = -0.0189819

[node name="Label" type="Label" parent="Levels"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 476.0
offset_top = 3.0
offset_right = -462.0
offset_bottom = -609.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_k2uah")
text = "Choose Level"

[node name="LevelsContainer" type="Container" parent="Levels"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.003
anchor_top = 0.176
anchor_right = 0.997
anchor_bottom = 0.985
offset_left = -3.6
offset_top = 1.19999
offset_right = 3.59998
offset_bottom = 5.12494
script = ExtResource("6_7uagd")

[node name="Return" type="Button" parent="Levels"]
layout_mode = 0
offset_left = 20.0
offset_top = 13.0
offset_right = 116.0
offset_bottom = 58.0
theme = SubResource("Theme_7l6up")
text = "Return
"

[connection signal="pressed" from="Bg/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Bg/levels" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Bg/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Bg/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Settings/Bg/Return" to="." method="_on_return_settings_pressed"]
[connection signal="pressed" from="Levels/Return" to="." method="_on_return_pressed"]
